welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:7: error: illegal start of simple expression
	}
        ^Program:8: error: 'while' expected but '{' found.
	{
        ^Program:17: error: '(' expected but ';' found.
	while (getY():Int != 6)
^Program:17: error: identifier expected but integer literal found.
	while (getY():Int != 6)
                             ^Program:18: error: ')' expected but '}' found.
}
^